{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 21,
  "lineage": "dfe78835-763d-d264-29ea-7d766eb04901",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "homework_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4714a5b46021684",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:elastic-ip/eipalloc-0a4714a5b46021684",
            "domain": "vpc",
            "id": "eipalloc-0a4714a5b46021684",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-46-137-0-14.eu-west-1.compute.amazonaws.com",
            "public_ip": "46.137.0.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "homework_eip"
            },
            "tags_all": {
              "Name": "homework_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "homework_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:internet-gateway/igw-0e7e678432290c6a0",
            "id": "igw-0e7e678432290c6a0",
            "owner_id": "296274010522",
            "tags": {
              "Name": "Homework_igw"
            },
            "tags_all": {
              "Name": "Homework_igw"
            },
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "dependencies": [
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "homework_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4714a5b46021684",
            "association_id": "eipassoc-05e6c08f5f5eb9e62",
            "connectivity_type": "public",
            "id": "nat-0861dffc83a2c8981",
            "network_interface_id": "eni-008032112bb0f5ab0",
            "private_ip": "10.0.0.74",
            "public_ip": "46.137.0.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e83c55247c2b59ec",
            "tags": {
              "Name": "homework-nat"
            },
            "tags_all": {
              "Name": "homework-nat"
            }
          },
          "dependencies": [
            "aws_eip.homework_eip",
            "aws_subnet.pub_subnet",
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "homework_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:route-table/rtb-0a5ac11eea659382e",
            "id": "rtb-0a5ac11eea659382e",
            "owner_id": "296274010522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e678432290c6a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homework public route table"
            },
            "tags_all": {
              "Name": "homework public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.homework_internet_gateway",
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "homework_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:route-table/rtb-0ec6b3eb5ed1f973a",
            "id": "rtb-0ec6b3eb5ed1f973a",
            "owner_id": "296274010522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0861dffc83a2c8981",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.homework_eip",
            "aws_nat_gateway.homework_nat_gw",
            "aws_subnet.pub_subnet",
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4b885075ddfa3fc",
            "route_table_id": "rtb-0a5ac11eea659382e",
            "subnet_id": "subnet-0e83c55247c2b59ec"
          },
          "dependencies": [
            "aws_internet_gateway.homework_internet_gateway",
            "aws_route_table.homework_pub_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.homework_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087153ec0b3c6b9b7",
            "route_table_id": "rtb-0a5ac11eea659382e",
            "subnet_id": "subnet-0128b122789ea8df7"
          },
          "dependencies": [
            "aws_internet_gateway.homework_internet_gateway",
            "aws_route_table.homework_pub_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2fe5e60777945fb",
            "route_table_id": "rtb-0ec6b3eb5ed1f973a",
            "subnet_id": "subnet-09658404d7e22ca5a"
          },
          "dependencies": [
            "aws_eip.homework_eip",
            "aws_nat_gateway.homework_nat_gw",
            "aws_route_table.homework_pvt_rt",
            "aws_subnet.pub_subnet",
            "aws_subnet.pvt_subnet",
            "aws_vpc.homework_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e63a6efb7fbf0d96",
            "route_table_id": "rtb-0ec6b3eb5ed1f973a",
            "subnet_id": "subnet-00928b09c2c28af33"
          },
          "dependencies": [
            "aws_eip.homework_eip",
            "aws_nat_gateway.homework_nat_gw",
            "aws_route_table.homework_pvt_rt",
            "aws_subnet.pub_subnet",
            "aws_subnet.pvt_subnet",
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0e83c55247c2b59ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e83c55247c2b59ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework_pvt_subnets"
            },
            "tags_all": {
              "Name": "homework_pvt_subnets"
            },
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "dependencies": [
            "aws_vpc.homework_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0128b122789ea8df7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0128b122789ea8df7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework_pvt_subnets"
            },
            "tags_all": {
              "Name": "homework_pvt_subnets"
            },
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "dependencies": [
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-09658404d7e22ca5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09658404d7e22ca5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework_pvt_subnets"
            },
            "tags_all": {
              "Name": "homework_pvt_subnets"
            },
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "dependencies": [
            "aws_vpc.homework_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-00928b09c2c28af33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00928b09c2c28af33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework_pvt_subnets"
            },
            "tags_all": {
              "Name": "homework_pvt_subnets"
            },
            "vpc_id": "vpc-0ddc1c8a41b6ac3ac"
          },
          "dependencies": [
            "aws_vpc.homework_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homework_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:vpc/vpc-0ddc1c8a41b6ac3ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/25",
            "default_network_acl_id": "acl-02166a894763f58e7",
            "default_route_table_id": "rtb-08456e503745f400e",
            "default_security_group_id": "sg-07611811115b56fb3",
            "dhcp_options_id": "dopt-0f1ce26971dcd0ae2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddc1c8a41b6ac3ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08456e503745f400e",
            "owner_id": "296274010522",
            "tags": {
              "Name": "homework_vpc"
            },
            "tags_all": {
              "Name": "homework_vpc"
            }
          }
        }
      ]
    }
  ]
}